--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     border-bottom: black solid 1px;
     gap: 10px;
     align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: aliceblue;
+    z-index: 1;
 
 }
 
@@ -35,6 +39,7 @@ body {
     border: none;
     width: 100%;
     font-size: 20px;
+    background-color: transparent;
 }
 
 .navbar__s2 input:focus {
@@ -45,6 +50,30 @@ body {
     display: flex;
     gap: 10px;
     align-items: center;
+}
+/* My learning popup */
+
+.Mylearning{
+    position: relative;
+    cursor: pointer;
+    
+}
+
+.Mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+
+
+
+}
+.Mylearning:hover .Mylearning__popup{
+    display: block;
 }
 
 .Categories {
@@ -62,9 +91,24 @@ body {
     border-radius: 30px;
 }
 
+.Sale-image{
+    position: relative;
+}
+
 .Sale-image img {
     width: 100%;
 }
+
+.sale-image__offer{
+    width: 35%;
+    border: solid black 2px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 10%;
+    left: 5%;
+}
+
 
 .Recommended {
     padding: 10px;
