--- a/style.css
+++ b/style.css
@@ -89,7 +89,18 @@ body {
     color: aliceblue;
     padding: 10px;
     border-radius: 30px;
+    border: solid blueviolet 1px;
+
 }
+
+.Categories p:hover {
+    transition: 1s;
+    background-color: transparent;
+    color:black;
+    border: solid blueviolet 1px;
+    cursor: pointer;
+}
+
 
 .Sale-image{
     position: relative;
@@ -107,6 +118,22 @@ body {
     position: absolute;
     top: 10%;
     left: 5%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom {
+    0%{
+     transform: scale(0);
+     opacity: 0;
+
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 
