--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ body {
     gap: 10px;
     align-items: center;
 }
+
+.navbar__s4 {
+    display: none;
+}
 /* My learning popup */
 
 .Mylearning{
@@ -149,7 +153,9 @@ body {
 }
 
 .Course-Card {
-    width: 400px
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .Course-Card img {
@@ -210,4 +216,28 @@ body {
     align-items: center;
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width:800px) {
+    body {
+        font-size: 10px;
+    }
+    
+}
+
+@media screen and (max-width:500px) {
+    .Course-Card {
+        flex-basis: 40%;
+    }
+    
+    .Categories{
+        display: none;
+    }
+    .navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+        cursor: pointer;
+    }
 }
